--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -5,6 +5,9 @@
     <string name="newDrawKey">Selection participants</string>
     <string name="validationKey">Confirmation</string>
     <string name="sendKey">Procéder au tirage !</string>
-    <string name="resultKey">Vous avez tiré au sort %s ! Félicitations !</string>
+    <string name="resultKey">Vous avez tiré au sort %1$s ! Félicitations !</string>
+    <string name="addConstraintKey">Contraintes</string>
+    <string name="confirmDeleteTitle">Confirmer suppression</string>
+    <string name="confirmDelete">Êtes-vous sûr de vouloir supprimer %1$s du tirage ??</string>
 
 </resources>
